feat: add clustering step to plotting section

--- a/run_analysis.ipynb
+++ b/run_analysis.ipynb
@@ -40,22 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import itertools\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "from pathlib import Path\n",
     "\n",
     "from readii.io.loaders import loadImageDatasetConfig, loadFeatureFilesFromImageTypes\n",
     "from readii.io.writers.correlation_writer import CorrelationWriter\n",
-    "from readii.analyze.correlation import getFeatureCorrelations \n",
+    "from readii.analyze.correlation import getFeatureCorrelations, getSelfCorrelations\n",
     "\n",
+    "from sklearn.cluster import AgglomerativeClustering \n",
     "\n",
     "import sys; sys.path.append(\"code\")\n",
-    "from analyze import prepPatientIndex, makeAllHeatmapPlots, makeAllHistogramPlots"
+    "from analyze import prepPatientIndex, makeAllHeatmapPlots, makeAllHistogramPlots, sortCorrelationsByClustering, makeAllClusterHeatmapPlots"
    ]
   },
   {
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +106,7 @@
     "\n",
     "# Make correlation results output directory\n",
     "correlations_dir = Path(\"results\", DATASET_NAME, \"analysis\", \"correlations\", f\"cropped_{CROP_METHOD}\")\n",
-    "for combo in itertools.product([correlations_dir], [\"matrix\", \"heatmap\", \"histogram\"]):\n",
+    "for combo in itertools.product([correlations_dir], [\"matrix\", \"heatmap\", \"histogram\", \"clustered\"]):\n",
     "    Path(*combo).mkdir(parents=True, exist_ok=True)"
    ]
   },
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,8 +450,11 @@
     "# Colormap to use for plots\n",
     "heatmap_cmap = \"nipy_spectral\"\n",
     "\n",
+    "# initialize clustering id array\n",
+    "clustering = np.array([])\n",
+    "\n",
     "# Whether to overwrite existing files\n",
-    "overwrite = False\n",
+    "overwrite = True\n",
     "\n",
     "# Get and set up the feature dataframe for the original features once\n",
     "vertical_feature_type = \"original\"\n",
@@ -474,12 +479,12 @@
     "    \n",
     "    # Load existing correlation matrix if it's available\n",
     "    if corr_matrix_output_path.exists() and corr_matrix_output_path.is_file():\n",
-    "        print(\"     Loading correlation matrix.\")\n",
+    "        print(\"Loading correlation matrix.\")\n",
     "        feature_correlation_df = pd.read_csv(corr_matrix_output_path, index_col=0)\n",
     "    \n",
     "    # Calculate the correlation matrix if the file doesn't exist\n",
     "    else:\n",
-    "        print(\"     Calculating correlation matrix.\")\n",
+    "        print(\"Calculating correlation matrix.\")\n",
     "        # Calculate correlations between original image features and image type features\n",
     "        feature_correlation_df = getFeatureCorrelations(vertical_features=vertical_features_df,\n",
     "                                                        horizontal_features=horizontal_features_df,\n",
@@ -492,7 +497,7 @@
     "                                HorizontalFeatureType=horizontal_feature_type,\n",
     "                                CorrelationType=correlation_method)\n",
     "        \n",
-    "    print(\"     Generating heatmaps for correlations.\")\n",
+    "    print(\"Generating heatmaps for correlations.\")\n",
     "    vert_heatmap_path, horiz_heatmap_path, cross_heatmap_path = makeAllHeatmapPlots(feature_correlation_df,\n",
     "                                                                                    vertical_feature_type,\n",
     "                                                                                    horizontal_feature_type,\n",
@@ -501,16 +506,31 @@
     "                                                                                    heatmap_cmap,\n",
     "                                                                                    overwrite)\n",
     "    \n",
-    "    print(\"     Generating histograms for correlations.\")\n",
-    "    vert_histogram_path, horiz_histogram_path, cross_histogram_path = makeAllHistogramPlots(feature_correlation_df,\n",
-    "                                                                                            vertical_feature_type,\n",
-    "                                                                                            horizontal_feature_type,\n",
-    "                                                                                            correlations_dir,\n",
-    "                                                                                            correlation_method,\n",
-    "                                                                                            num_bins=450,\n",
-    "                                                                                            self_corr_y_max = 250000,\n",
-    "                                                                                            cross_corr_y_max = 950000,\n",
-    "                                                                                            overwrite=overwrite)\n"
+    "    # print(\"Generating histograms for correlations.\")\n",
+    "    # vert_histogram_path, horiz_histogram_path, cross_histogram_path = makeAllHistogramPlots(feature_correlation_df,\n",
+    "    #                                                                                         vertical_feature_type,\n",
+    "    #                                                                                         horizontal_feature_type,\n",
+    "    #                                                                                         correlations_dir,\n",
+    "    #                                                                                         correlation_method,\n",
+    "    #                                                                                         num_bins=450,\n",
+    "    #                                                                                         self_corr_y_max = 250000,\n",
+    "    #                                                                                         cross_corr_y_max = 950000,\n",
+    "    #                                                                                         overwrite=overwrite)\n",
+    "    print(\"Generating heatmaps for clustered correlations.\")\n",
+    "    if len(clustering) == 0:\n",
+    "        # Cluster the features based on the correlations from the Original image\n",
+    "        original_corr = getSelfCorrelations(feature_correlation_df, vertical_feature_type)\n",
+    "        clustering = AgglomerativeClustering(linkage=\"complete\", metric=\"precomputed\", n_clusters = None, distance_threshold = 0).fit_predict(original_corr)\n",
+    "    \n",
+    "    \n",
+    "    vert_heatmap_path, horiz_heatmap_path, cross_heatmap_path = makeAllClusterHeatmapPlots(feature_correlation_df,\n",
+    "                                                                                           vertical_feature_type,\n",
+    "                                                                                           horizontal_feature_type,\n",
+    "                                                                                           clustering,\n",
+    "                                                                                           correlations_dir / \"clustered\",\n",
+    "                                                                                           correlation_method,\n",
+    "                                                                                           heatmap_cmap,\n",
+    "                                                                                           overwrite)\n"
    ]
   },
   {
@@ -590,6 +610,203 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clustering Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing original vs shuffled_full correlations.\n",
+      "     Generating heatmaps for clustered correlations.\n",
+      "Plotting vertical feature correlations heatmap...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-30T12:26:36-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/clustered/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHeatmap:73\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations heatmap...\n",
+      "Plotting cross feature correlations heatmap...\n",
+      "Processing original vs shuffled_roi correlations.\n",
+      "     Generating heatmaps for clustered correlations.\n",
+      "Plotting vertical feature correlations heatmap...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-30T12:27:36-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/clustered/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHeatmap:73\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations heatmap...\n",
+      "Plotting cross feature correlations heatmap...\n",
+      "Processing original vs shuffled_non_roi correlations.\n",
+      "     Generating heatmaps for clustered correlations.\n",
+      "Plotting vertical feature correlations heatmap...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-30T12:28:37-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/clustered/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHeatmap:73\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations heatmap...\n",
+      "Plotting cross feature correlations heatmap...\n",
+      "Processing original vs randomized_sampled_full correlations.\n",
+      "     Generating heatmaps for clustered correlations.\n",
+      "Plotting vertical feature correlations heatmap...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-30T12:29:37-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/clustered/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHeatmap:73\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations heatmap...\n",
+      "Plotting cross feature correlations heatmap...\n",
+      "Processing original vs randomized_sampled_roi correlations.\n",
+      "     Generating heatmaps for clustered correlations.\n",
+      "Plotting vertical feature correlations heatmap...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-30T12:30:41-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/clustered/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHeatmap:73\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations heatmap...\n",
+      "Plotting cross feature correlations heatmap...\n",
+      "Processing original vs randomized_sampled_non_roi correlations.\n",
+      "     Generating heatmaps for clustered correlations.\n",
+      "Plotting vertical feature correlations heatmap...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-30T12:31:44-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/clustered/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHeatmap:73\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting horizontal feature correlations heatmap...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-30T12:31:54-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/clustered/heatmap/nipy_spectral/randomized_sampled_non_roi_pearson_self_correlation_heatmap.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHeatmap:73\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting cross feature correlations heatmap...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2m2025-01-30T12:32:02-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/cropped_bbox/clustered/heatmap/nipy_spectral/original_vs_randomized_sampled_non_roi_pearson_cross_correlation_heatmap.png already exists. \n",
+      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHeatmap:73\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Name of the column used to extract the patient ID for a row of features\n",
+    "file_path_column = 'image_path'\n",
+    "\n",
+    "# Correlation method to apply\n",
+    "correlation_method = \"pearson\"\n",
+    "\n",
+    "# Colormap to use for plots\n",
+    "heatmap_cmap = \"nipy_spectral\"\n",
+    "\n",
+    "# Whether to overwrite existing files\n",
+    "overwrite = False\n",
+    "\n",
+    "# Get and set up the feature dataframe for the original features once\n",
+    "vertical_feature_type = \"original\"\n",
+    "\n",
+    "clustering = np.array([])\n",
+    "\n",
+    "output_fig_directory = correlations_dir / \"clustered\"\n",
+    "\n",
+    "# Iterate over each negative control feature set and perform correlation analysis\n",
+    "for horizontal_feature_type in negative_control_list:\n",
+    "    print(f\"Processing {vertical_feature_type} vs {horizontal_feature_type} correlations.\")\n",
+    "\n",
+    "    feature_correlation_df = pd.read_csv(f\"results/RADCURE/analysis/correlations/cropped_centroid/matrix/RADCURE_{vertical_feature_type}_{horizontal_feature_type}_pearson_correlations.csv\", index_col=0)\n",
+    "\n",
+    "    if len(clustering) == 0:\n",
+    "        # Cluster the features based on the correlations from the Original image\n",
+    "        original_corr = getSelfCorrelations(feature_correlation_df, vertical_feature_type)\n",
+    "        clustering = AgglomerativeClustering(linkage=\"complete\", metric=\"precomputed\", n_clusters = None, distance_threshold = 0).fit_predict(original_corr)\n",
+    "    \n",
+    "    print(\"     Generating heatmaps for clustered correlations.\")\n",
+    "    vert_heatmap_path, horiz_heatmap_path, cross_heatmap_path = makeAllClusterHeatmapPlots(feature_correlation_df,\n",
+    "                                                                                           vertical_feature_type,\n",
+    "                                                                                           horizontal_feature_type,\n",
+    "                                                                                           clustering,\n",
+    "                                                                                           output_fig_directory,\n",
+    "                                                                                           correlation_method,\n",
+    "                                                                                           heatmap_cmap,\n",
+    "                                                                                           overwrite)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -613,7 +830,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
